--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,15 +1,137 @@
-.container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
+@import '/styles/libs/mixins';
+@import '/styles/libs/vendor';
+
+#layout {
+  padding-top: 3.5em;
+  #header {
+    background: _palette(accent2-transparent);
+    box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.25);
+    cursor: default;
+    height: 3.5em;
+    left: 0;
+    line-height: 3.5em;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 100;
+  
+    h1 {
+      height: inherit;
+      left: 1.25em;
+      line-height: inherit;
+      margin: 0;
+      position: absolute;
+      top: 0;
+    }
+  
+    nav {
+      position: absolute;
+      right: 1em;
+      top: 0;
+  
+      ul {
+        margin: 0;
+  
+        li {
+          display: inline-block;
+          margin-left: 1em;
+  
+          a, span {
+            border: 0;
+            color: inherit;
+            display: inline-block;
+            height: inherit;
+            line-height: inherit;
+            outline: 0;
+  
+            &:not(.button):before {
+              margin-right: 0.5em;
+            }
+          }
+  
+          &.active {
+            > a, > span {
+              color: _palette(accent1);
+            }
+          }
+  
+          > ul {
+            display: none;
+          }
+        }
+      }
+    }
+  }
+  
+  .landing {
+    #layout {
+      padding-top: 0;
+    }
+  
+    #header {
+      background: transparent;
+      box-shadow: none;
+      position: absolute;
+    }
+    @include icon(false, solid);
+    
+    // Spinner (inactive)
+    
+      &:before {
+        @include vendor('animation', ('spinner-show 1.5s 1 0.25s ease forwards', 'spinner-hide 0.25s ease-in-out forwards !important'));
+        @include vendor('transform-origin', '50% 50%');
+    
+        color: _palette(fg-lighter);
+        content: '\f1ce';
+        cursor: default;
+        display: block;
+        font-size: 2em;
+        height: 2em;
+        left: 50%;
+        line-height: 2em;
+        margin: -1em 0 0 -1em;
+        opacity: 0;
+        position: fixed;
+        text-align: center;
+        top: 50%;
+        width: 2em;
+        z-index: -1;
+      }
+    
+    // Overlay (inactive)
+    
+      &:after {
+        @include vendor('animation', 'overlay-hide #{_duration(landing-fadein)} ease-in forwards !important');
+        background: _palette(bg);
+        content: '';
+        display: block;
+        height: 100%;
+        left: 0;
+        opacity: 0;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: -1;
+      }
+    
+    &.isPreload {
+    
+      // Spinner (active)
+    
+        &:before {
+          @include vendor('animation', ('spinner-show 1.5s 1 0.25s ease forwards', 'spinner-rotate 0.75s infinite linear !important'));
+          z-index: _misc(z-index-overlay) + 1;
+        }
+    
+      // Overlay (active)
+    
+        &:after {
+          @include vendor('animation', 'none !important');
+          opacity: 1;
+          z-index: _misc(z-index-overlay);
+        }
+    
+    }
+  }
 }
 
-.header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.backToHome {
-  margin: 3rem 0 0;
-}
