--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,16 +1,22 @@
+@import '/styles/libs/vars';
+@import '/styles/libs/functions';
 @import '/styles/libs/mixins';
 @import '/styles/libs/vendor';
+@import '/styles/libs/breakpoints';
+@import '/styles/libs/html-grid';
+@import url('/webfonts/fontawesome-all.min.css');
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
 #layout {
-  padding-top: 3.5em;
+
   #header {
-    background: _palette(accent2-transparent);
-    box-shadow: 0 0 0.25em 0 rgba(0,0,0,0.25);
+    background: transparent;
+    box-shadow: none;
+    position: absolute;
     cursor: default;
     height: 3.5em;
     left: 0;
     line-height: 3.5em;
-    position: fixed;
     top: 0;
     width: 100%;
     z-index: 100;
@@ -67,12 +73,7 @@
     #layout {
       padding-top: 0;
     }
-  
-    #header {
-      background: transparent;
-      box-shadow: none;
-      position: absolute;
-    }
+
     @include icon(false, solid);
     
     // Spinner (inactive)
