--- a/styles/libs/_breakpoints.scss
+++ b/styles/libs/_breakpoints.scss
@@ -221,3 +221,13 @@
 			}
 
 	}
+
+// Breakpoints.
+
+@include breakpoints((
+	xlarge:   ( 1281px,  1680px ),
+	large:    ( 981px,   1280px ),
+	medium:   ( 737px,   980px  ),
+	small:    ( 481px,   736px  ),
+	xsmall:   ( null,    480px  ),
+));
