finish cta form and mobile presentation

--- a/components/banner/banner.module.scss
+++ b/components/banner/banner.module.scss
@@ -1,7 +1,7 @@
 @import '/styles/libs/vars';
 @import '/styles/libs/functions';
 @import '/styles/libs/mixins';
-@import '/styles/libs/variables';
+@import '/styles/libs/vars';
 @import '/styles/libs/vendor';
 @import '/styles/libs/breakpoints';
 @import '/styles/libs/html-grid';
