--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,6 +1,7 @@
 @import '/styles/libs/vars';
 @import '/styles/libs/functions';
 @import '/styles/libs/mixins';
+@import '/styles/libs/vars';
 @import '/styles/libs/vendor';
 @import '/styles/libs/breakpoints';
 @import '/styles/libs/html-grid';
@@ -8,6 +9,32 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,100italic,300italic");
 
 #layout {
+  @include vendor('backface-visibility', 'hidden');
+  @include vendor('transition', 'transform #{_duration(navPanel)} ease');
+
+  #titleBar {
+    @include vendor('backface-visibility', 'hidden');
+    @include vendor('transition', 'transform #{_duration(navPanel)} ease');
+    display: block;
+    height: 44px;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: _misc(z-index-base) + 1;
+    background: _palette(accent2);
+    box-shadow: 0 0.125em 0.125em 0 rgba(0,0,0,0.125);
+  }
+
+  &.navPanelVisible {
+    #titleBar {
+      @include vendor('transform', 'translateX(#{_size(navPanel)})');
+    }
+
+    #navPanel {
+      @include vendor('transform', 'translateX(0)');
+    }
+  }
 
   #header {
     background: transparent;
@@ -64,6 +91,92 @@
           > ul {
             display: none;
           }
+        }
+      }
+    }
+  }
+
+  #navPanel {
+    @include vendor('backface-visibility', 'hidden');
+    @include vendor('transform', 'translateX(#{_size(navPanel) * -1})');
+    @include vendor('transition', ('transform #{_duration(navPanel)} ease'));
+    display: block;
+    height: 100%;
+    left: 0;
+    overflow-y: auto;
+    position: fixed;
+    top: 0;
+    width: _size(navPanel);
+    z-index: _misc(z-index-base) + 2;
+    background: darken(_palette(bg), 2);
+    padding: 0.75em 1.25em;
+
+    .link {
+      border: 0;
+      border-top: solid 1px transparentize(_palette(border), 0.25);
+      color: _palette(fg);
+      display: block;
+      height: 3em;
+      line-height: 3em;
+      text-decoration: none;
+
+      &:hover {
+        color: inherit !important;
+      }
+
+      &:first-child {
+        border-top: 0;
+      }
+
+      &.depth0 {
+        color: _palette(fg-bold);
+        font-weight: _font(weight-bold);
+      }
+
+      .indent-1 { display: inline-block; width: 1.25em; }
+      .indent-2 { display: inline-block; width: 2.5em; }
+      .indent-3 { display: inline-block; width: 3.75em; }
+      .indent-4 { display: inline-block; width: 5em; }
+      .indent-5 { display: inline-block; width: 6.25em; }
+    }
+  }
+
+  #footer {
+    background: _palette(accent2);
+    padding: $size-wrapper-pad-tb 0;
+    text-align: center;
+  
+    .icons {
+      .icon {
+        &.alt {
+          @include line-icon(_palette(accent2), _palette(fg-light));
+        }
+      }
+    }
+  
+    .copyright {
+      color: _palette(fg-light);
+      font-size: 0.8em;
+      line-height: 1em;
+      margin: 2em 0 0 0;
+      padding: 0;
+      text-align: center;
+  
+      li {
+        border-left: solid 1px _palette(border);
+        display: inline-block;
+        list-style: none;
+        margin-left: 1.5em;
+        padding-left: 1.5em;
+  
+        &:first-child {
+          border-left: 0;
+          margin-left: 0;
+          padding-left: 0;
+        }
+  
+        a {
+          color: inherit;
         }
       }
     }
@@ -134,5 +247,120 @@
     
     }
   }
+
+  @include breakpoint('<=large') {
+
+		$size-wrapper-pad-tb: 4.5em;
+		$size-wrapper-pad-lr: 2.5em;
+
+			#footer {
+				padding: $size-wrapper-pad-tb 0;
+			}
+	}
+
+  @include breakpoint('<=medium') {
+
+		$size-wrapper-pad-tb: 4.5em;
+		$size-wrapper-pad-lr: 2.5em;
+
+			#footer {
+				padding: $size-wrapper-pad-tb 0;
+			}
+	}
+
+  @include breakpoint('<=small') {
+
+    $size-wrapper-pad-tb: 3.25em;
+    $size-wrapper-pad-lr: 1.5em;
+
+    @include vendor('backface-visibility', 'hidden');
+    @include vendor('transition', 'transform #{_duration(navPanel)} ease');
+    padding-bottom: 1px;
+    padding-top: 44px !important;
+
+
+    #header {
+      display: none;
+    }
+
+    #titleBar {
+      @include vendor('backface-visibility', 'hidden');
+      @include vendor('transition', 'transform #{_duration(navPanel)} ease');
+      display: block;
+      height: 44px;
+      left: 0;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: _misc(z-index-base) + 1;
+      background: _palette(accent2);
+      box-shadow: 0 0.125em 0.125em 0 rgba(0,0,0,0.125);
+
+      .title {
+        color: _palette(fg-bold);
+        display: block;
+        font-weight: _font(weight-bold);
+        height: 44px;
+        line-height: 44px;
+        text-align: center;
+
+        a {
+          color: inherit;
+          border: 0;
+        }
+      }
+
+      .toggle {
+        @include icon(false, solid);
+        height: 60px;
+        left: 0;
+        position: absolute;
+        top: 0;
+        width: 90px;
+        outline: 0;
+        border: 0;
+
+        &:before {
+          background: _palette(accent1);
+          color: _palette(fg-light);
+          content: '\f0c9';
+          display: block;
+          font-size: 18px;
+          height: 44px;
+          left: 0;
+          line-height: 44px;
+          position: absolute;
+          text-align: center;
+          top: 0;
+          width: 54px;
+        }
+      }
+    }
+
+    #footer {
+      padding: $size-wrapper-pad-tb $size-wrapper-pad-lr;
+    }
+  }
+
+  @include breakpoint('<=xsmall') {
+
+		$size-wrapper-pad-tb: 3em;
+		$size-wrapper-pad-lr: 1.25em;
+
+			#footer {
+				padding: $size-wrapper-pad-tb $size-wrapper-pad-lr;
+
+				.copyright {
+					line-height: inherit;
+
+					li {
+						border-left: 0;
+						display: block;
+						margin: 0;
+						padding: 0;
+					}
+				}
+			}
+	}
 }
 
