--- a/components/spotlight/spotlight.module.scss
+++ b/components/spotlight/spotlight.module.scss
@@ -1,7 +1,7 @@
 @import '/styles/libs/vars';
 @import '/styles/libs/functions';
 @import '/styles/libs/mixins';
-@import '/styles/libs/variables';
+@import '/styles/libs/vars';
 @import '/styles/libs/vendor';
 @import '/styles/libs/breakpoints';
 @import '/styles/libs/html-grid';
@@ -141,59 +141,91 @@
       }
     }
   }
+}
 
-	@include breakpoint('<=medium') {
 
-		$size-wrapper-pad-tb: 4.5em;
-		$size-wrapper-pad-lr: 2.5em;
+@include breakpoint('<=large') {
 
-			.spotlight {
-				background-attachment: scroll;
-				height: auto;
+  $size-wrapper-pad-tb: 4.5em;
+  $size-wrapper-pad-lr: 2.5em;
+  
+    .spotlight {
+      &.top {
+        .content {
+          padding: ($size-wrapper-pad-tb * 0.85) 0 (($size-wrapper-pad-tb * 0.85) - _size(element-margin)) 0;
+        }
+      }
 
-				.image.main {
-					display: block;
-					margin: 0;
-					max-height: 40vh;
-					overflow: hidden;
-				}
+      &.bottom {
+        .content {
+          padding: ($size-wrapper-pad-tb * 0.85) 0 (($size-wrapper-pad-tb * 1.1) - _size(element-margin)) 0;
+        }
+      }
 
-				.content {
-					background-color: _palette(bg);
-					border-width: 0 !important;
-					border-top-width: 0.35em !important;
-					bottom: auto !important;
-					left: auto !important;
-					padding: $size-wrapper-pad-tb $size-wrapper-pad-lr ($size-wrapper-pad-tb - _size(element-margin)) $size-wrapper-pad-lr !important;
-					position: relative;
-					right: auto !important;
-					text-align: center;
-					top: auto !important;
-					width: 100% !important;
+      &.left, &.right {
+        .content {
+          padding: $size-wrapper-pad-tb $size-wrapper-pad-lr;
+          width: 25em;
+        }
+      }
+    }
+}
 
-					.actions {
-						@include vendor('justify-content', 'center');
-						width: 100%;
-						margin-left: 0;
+@include breakpoint('<=medium') {
 
-						li {
-							&:first-child {
-								padding-left: 0;
-							}
-						}
-					}
-				}
+  $size-wrapper-pad-tb: 4.5em;
+  $size-wrapper-pad-lr: 2.5em;
 
-				.gotoNext {
-					display: none;
-				}
-			}
-	}
+    .spotlight {
+      background-attachment: scroll;
+      height: auto;
 
-  @include breakpoint('<=small') {
+      .image.main {
+        display: block;
+        margin: 0;
+        max-height: 40vh;
+        overflow: hidden;
+      }
 
-		$size-wrapper-pad-tb: 3.25em;
-		$size-wrapper-pad-lr: 1.5em;
+      .content {
+        background-color: _palette(bg);
+        border-width: 0 !important;
+        border-top-width: 0.35em !important;
+        bottom: auto !important;
+        left: auto !important;
+        padding: $size-wrapper-pad-tb $size-wrapper-pad-lr ($size-wrapper-pad-tb - _size(element-margin)) $size-wrapper-pad-lr !important;
+        position: relative;
+        right: auto !important;
+        text-align: center;
+        top: auto !important;
+        width: 100% !important;
+
+        .actions {
+          @include vendor('justify-content', 'center');
+          width: 100%;
+          margin-left: 0;
+
+          li {
+            &:first-child {
+              padding-left: 0;
+            }
+          }
+        }
+      }
+
+      .gotoNext {
+        display: none;
+      }
+    }
+}
+
+@include breakpoint('<=small') {
+
+  $size-wrapper-pad-tb: 3.25em;
+  $size-wrapper-pad-lr: 1.5em;
+
+  .spotlight {
+    box-shadow: 0 0.125em 0.5em 0 rgba(0,0,0,0.25);
 
     .gotoNext {
       &:before {
@@ -203,8 +235,6 @@
       }
     }
 
-    box-shadow: 0 0.125em 0.5em 0 rgba(0,0,0,0.25);
-
     .image.main {
       max-height: 60vh;
     }
@@ -213,7 +243,5 @@
       border-top-width: 0.2em !important;
       padding: $size-wrapper-pad-tb $size-wrapper-pad-lr ($size-wrapper-pad-tb - _size(element-margin)) $size-wrapper-pad-lr !important;
     }
-
   }
-
 }
