--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,7 +1,7 @@
 @import '/styles/libs/vars';
 @import '/styles/libs/functions';
 @import '/styles/libs/mixins';
-@import '/styles/libs/variables';
+@import '/styles/libs/vars';
 @import '/styles/libs/vendor';
 @import '/styles/libs/breakpoints';
 @import '/styles/libs/html-grid';
@@ -135,51 +135,6 @@ body.isTouch {
     background-attachment: scroll;
   }
 }
-
-/* Footer */
-
-#footer {
-  background: _palette(accent2);
-  padding: $size-wrapper-pad-tb 0;
-  text-align: center;
-
-  .icons {
-    .icon {
-      &.alt {
-        @include line-icon(_palette(accent2), _palette(fg-light));
-      }
-    }
-  }
-
-  .copyright {
-    color: _palette(fg-light);
-    font-size: 0.8em;
-    line-height: 1em;
-    margin: 2em 0 0 0;
-    padding: 0;
-    text-align: center;
-
-    li {
-      border-left: solid 1px _palette(border);
-      display: inline-block;
-      list-style: none;
-      margin-left: 1.5em;
-      padding-left: 1.5em;
-
-      &:first-child {
-        border-left: 0;
-        margin-left: 0;
-        padding-left: 0;
-      }
-
-      a {
-        color: inherit;
-      }
-    }
-  }
-}
-
-
 
 footer {
   &.major {
@@ -371,9 +326,6 @@ header.major {
           padding-top: 0;
         }
   
-        input[type="submit"],
-        input[type="reset"],
-        input[type="button"],
         button,
         .button {
           width: 100%;
