--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -163,22 +163,24 @@ li.alt {
   display: inline-block;
   position: relative;
   overflow: hidden;
+  height: 100%;
 
-  &:before {
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-image: url('/images/overlay.png');
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
+  // &:before {
+  //   content: '';
+  //   display: block;
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   background-image: url('/images/overlay.png');
+  //   width: 100%;
+  //   z-index: 1;
+  // }
 
   img {
     border-radius: _size(border-radius);
     display: block;
+    object-fit: fill;
+    height: 100%;
   }
 
   &.left {
@@ -205,10 +207,10 @@ li.alt {
   &.fit {
     display: block;
     margin: 0 0 _size(element-margin) 0;
-    width: 100%;
+    // width: 100%;
 
     img {
-      width: 100%;
+      // width: 100%;
     }
   }
 }
