--- a/components/spotlight/spotlight.module.scss
+++ b/components/spotlight/spotlight.module.scss
@@ -14,7 +14,7 @@
   background-size:		cover;
   box-shadow: 0 0.25em 0.5em 0 rgba(0,0,0,0.25);
   height: 100vh;
-  // overflow: hidden;
+  overflow: hidden;
   position: relative;
 
   // Force spotlights to stack in reverse order (needed for our box
@@ -25,19 +25,20 @@
     }
   }
 
-  .overlay {
-    background-image: url('/images/overlay.png');
-    content: '';
-    display: block;
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 100%;
-    opacity: 50%;
-  }
-
   .image.main {
     // display: none;
+
+    &:before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-image: url('/images/overlay.png');
+      width: 100%;
+      height: 100vh;
+      z-index: 1;
+    }
     img {
       position: relative;
     }
@@ -50,6 +51,7 @@
     border-style: solid;
     opacity: 1;
     position: absolute;
+    z-index: 2;
   }
 
   .gotoNext {
