--- a/components/spotlight/spotlight.module.scss
+++ b/components/spotlight/spotlight.module.scss
@@ -59,6 +59,7 @@
     @include vendor('transition', 'transform 0.75s ease, opacity 1s ease-in');
     @include vendor('transition-delay', '0.5s');
     opacity: 1;
+    z-index: 3;
   }
 
   &.top, &.bottom {
@@ -179,25 +180,25 @@
   $size-wrapper-pad-lr: 2.5em;
 
     .spotlight {
-      background-attachment: scroll;
-      height: auto;
+      // background-attachment: scroll;
+      // height: auto;
 
       .image.main {
-        display: block;
-        margin: 0;
-        max-height: 40vh;
-        overflow: hidden;
+        // display: block;
+        // margin: 0;
+        // height: 40vh;
+        // overflow: hidden;
       }
 
       .content {
         background-color: _palette(bg);
         border-width: 0 !important;
         border-top-width: 0.35em !important;
-        bottom: auto !important;
-        left: auto !important;
         padding: $size-wrapper-pad-tb $size-wrapper-pad-lr ($size-wrapper-pad-tb - _size(element-margin)) $size-wrapper-pad-lr !important;
-        position: relative;
-        right: auto !important;
+        // position: relative;
+        // right: auto !important;
+        // left: auto !important;
+        // bottom: auto !important;
         text-align: center;
         top: auto !important;
         width: 100% !important;
