--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -15,7 +15,7 @@
   #titleBar {
     @include vendor('backface-visibility', 'hidden');
     @include vendor('transition', 'transform #{_duration(navPanel)} ease');
-    display: block;
+    display: none;
     height: 44px;
     left: 0;
     position: fixed;
@@ -25,7 +25,7 @@
     background: _palette(accent2);
     box-shadow: 0 0.125em 0.125em 0 rgba(0,0,0,0.125);
   }
-
+  
   &.navPanelVisible {
     #titleBar {
       @include vendor('transform', 'translateX(#{_size(navPanel)})');
@@ -100,7 +100,7 @@
     @include vendor('backface-visibility', 'hidden');
     @include vendor('transform', 'translateX(#{_size(navPanel) * -1})');
     @include vendor('transition', ('transform #{_duration(navPanel)} ease'));
-    display: block;
+    display: none;
     height: 100%;
     left: 0;
     overflow-y: auto;
@@ -277,6 +277,10 @@
     @include vendor('transition', 'transform #{_duration(navPanel)} ease');
     padding-bottom: 1px;
     padding-top: 44px !important;
+
+    #navPanel {
+      display: block;
+    }
 
 
     #header {
