--- a/components/spotlight/spotlight.module.scss
+++ b/components/spotlight/spotlight.module.scss
@@ -218,6 +218,17 @@
           }
         }
       }
+      &.left, &.right {
+        .content {
+          height: auto;
+          left: 0;
+          padding: ($size-wrapper-pad-tb * 0.85) 0 (($size-wrapper-pad-tb * 0.85) - _size(element-margin)) 0;
+          width: 100%;
+          border-top-width: 0.35em;
+          bottom: 0;
+          border-color: _palette(accent1);
+        }
+      }
     }
 }
 
@@ -230,6 +241,7 @@
     box-shadow: 0 0.125em 0.5em 0 rgba(0,0,0,0.25);
 
     .gotoNext {
+      display: none;
       &:before {
         height: 0.8em;
         margin: -0.4em 0 0 -0.6em;
