--- a/components/banner/banner.module.scss
+++ b/components/banner/banner.module.scss
@@ -11,7 +11,7 @@
 #banner {
   background-attachment: fixed;
   background-color: _palette(accent2);
-  background-image: url('/images/banner.jpg');
+  background-image: url('/images/banner.webp');
   background-position: center center;
   background-size: cover;
   box-shadow: 0 0.25em 0.5em 0 rgba(0,0,0,0.25);
@@ -37,6 +37,7 @@
     position: absolute;
     top: 0;
     width: 100%;
+    opacity: 75%;
   }
 
   .content {
